feature: finished components tests, added  cypress tests

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div *ngIf="$isLogged() | async; else notLogged">
       <span routerLink="sessions" class="link">Sessions</span>
       <span routerLink="me" class="link">Account</span>
-      <span (click)="logout()" class="link">Logout</span>
+      <span (click)="logout()" class="link" data-testid="button_logout">Logout</span>
     </div>
     <ng-template #notLogged>
       <div>
